# m5stickc-ble-clinometer

./: .gitignore  CHANGELOG.md  README.md  build  deploy  flash  monitor  platformio.ini  pyproject.toml
.github/workflows/: release.yml
docs/: KNOW-HOW.md  m5stickc-clinometer-ble-spec.md
docs/adr/: 0002-angle-convention.md
scripts/: install-hooks
scripts/hooks/: pre-commit
src/: main.cpp  version.h
src/ble/: BleManager.cpp  BleManager.h
src/imu/: ImuManager.cpp  ImuManager.h
src/model/: DeviceState.h
src/system/: BatLog.cpp  BatLog.h  Buttons.cpp  Buttons.h  Nvm.cpp  Nvm.h  PowerManager.cpp  PowerManager.h
src/ui/: Display.cpp  Display.h
tests/: 3d_model.py  conftest.py  test_3d_model.py  test_commands.py  test_m5ctl.py  test_newline.py  test_persistence.py  test_sanitize.py
tools/: demo.m5s  m5ctl  set-utc-now
