[project]
name = "m5stickc-ble-clinometer"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bleak>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
